--- a/source/resume/index.html
+++ b/source/resume/index.html
@@ -168,7 +168,7 @@
     </ul>
   </ul>
   <h2>自我评价</h2>
-  <p>热爱前端，热爱技术，不局限自己于前端。善于沟通，对用户体验有着极高的追求。</p>
+  <p>热爱前端，热爱技术，不局限自己于前端。明白沉淀与积累的重要性。善于沟通，对用户体验有着极高的追求。</p>
 </div>
 </body>
 </html>
