修改404页图标404问题

--- a/source/404.html
+++ b/source/404.html
@@ -45,7 +45,7 @@
 		<embed src="52.swf" width="600" height="460"></embed>
 	</div>
 	<footer>
-		<img src="home.png" alt="返回首页" width="30">
+		<img src="/home.png" alt="返回首页" width="30">
 		<a href="javascript:location.href=location.origin" title="返回首页">返回首页</a>
 	</footer>
 </body>
