--- a/source/resume/index.html
+++ b/source/resume/index.html
@@ -43,22 +43,23 @@
     }
 
     dl {
-      margin: 25px 0 20px 0;
+      margin: 20px 0;
     }
 
     dd {
       margin: 10px 0;
-      font-size: .9em;
+      /* font-size: .9em; */
       line-height: 1.5em;
     }
 
     .center {
       text-align: center;
     }
-
+    .p0 {
+      padding: 0;
+    }
     .justify {
-      padding-right: 40px;
-      margin: 20px -20px;
+      margin: 20px;
       list-style: none;
       overflow: hidden;
     }
@@ -93,7 +94,15 @@
     li.block {
       width: 100%;
     }
-  
+    .project {
+      margin-bottom: 20px;
+    }
+    .project + .project{
+      border-top: 1px solid #d5d5d5
+    }
+    .desc {
+      padding: 0 5px;
+    }
   </style>
 </head>
 <body>
@@ -105,18 +114,17 @@
     <li>年龄：23</li>
     <li>籍贯：山西运城</li>
     <li>手机：18435155822</li>
-    <li>博客：<a href="https://pangjunpeng.com" target="_blank">https://pangjunpeng.com</a></li>
     <li>邮箱：<a href="mailto:justdoit0212@foxmail.com">justdoit0212@foxmail.com</a></li>
-    <li class="block">Github：<a href="https://github.com/pangjunpeng" target="_blank">https://github.com/pangjunpeng</a>
+    <li>Github：<a href="https://github.com/pangjunpeng" target="_blank">https://github.com/pangjunpeng</a>
     </li>
-    <li class="block">个人组件库：<a href="https://pangjunpeng.com/myWheels/" target="_blank">https://pangjunpeng.com/myWheels/</a>
+    <li>博客：<a href="https://pangjunpeng.com" target="_blank">https://pangjunpeng.com</a></li>
     </li>
   </ul>
   <h2>教育经历</h2>
-  <ul>
+  <ul class="p0">
     <li class="justify">
       <span>2013 - 2017</span>
-      <span>太原科技大学（本科）</span>
+      <span class="center">太原科技大学（本科）</span>
       <span>网络工程</span>
     </li>
   </ul>
@@ -124,51 +132,53 @@
   <ol>
     <li>熟练掌握<strong>HTML5 CSS3</strong>，掌握动画，过渡，响应式等常用技术，像素级还原UI稿</li>
     <li>熟练掌握<strong>JavaScript</strong>，追求对语言特性的深入理解</li>
-    <li>熟练掌握<strong>VueJS</strong>常用功能，能独立开发常用组件，熟悉<strong>Vue-Router</strong>,<strong>Vuex</strong>等核心插件</li>
-    <li>熟练掌握<strong>Less</strong>/<strong>Sass</strong>等CSS预处理语言，熟练使用<strong>ES6</strong></li>
-    <li>熟悉<strong>webpack/gulp</strong>等构建工具，能独立搭建开发工作流</li>
-    <li>熟悉<strong>Mobile Web</strong>及<strong>微信</strong>开发环境，了解小程序技术</li>
+    <li>熟练掌握<strong>VueJS</strong>常用功能，能独立开发常用组件，熟悉<strong>Vue-Router</strong>,<strong>Vuex</strong>等核心库</li>
+    <li>熟练掌握<strong>Less</strong>/<strong>Sass</strong>/<strong>Scss</strong>等CSS预处理语言，熟练使用<strong>ES6</strong></li>
+    <li>熟悉<strong>webpack/gulp/fis3</strong>等构建工具，能独立搭建开发工作流</li>
+    <li>熟悉<strong>PC</strong>,<strong>Mobile</strong>及<strong>微信</strong>开发环境，了解小程序技术</li>
     <li>热爱前端，追求开发高质量、高可维护性的代码，对用户体验有极致的追求</li>
   </ol>
   <h2>项目经历</h2>
-  <ul>
-    <li class="justify">
-      <span>2017.7 - 至今</span>
-      <span>北京科蓝软件系统股份有限公司</span>
+  <div class="project">
+    <div class="justify">
+      <span>2018.10 - 至今</span>
+      <span class="center">抓饭直播</span>
       <span>前端开发</span>
-    </li>
+    </div>
     <ul>
-      <li>部门：光大银行</li>
-      <li>主要职责：与同事密切配合，高效完成任务。优化前端工作流程，营造技术氛围</li>
+      <li><strong>主要职责：</strong>负责抓饭直播PC站，m站，以及微信公众号的开发与维护</li>
       <dl>
-        <dt><strong>公募基金和私募产品大集合</strong></dt>
-        <dd>在客户端内实现产品展示，详情介绍，产品购买等功能，在微信公众号内增加产品列表入口</dd>
-        <dd><strong>技术栈</strong>：Vue,
-          Vue-Router。使用vue-cli搭建工作环境，webpack内配置proxytable实现跨域，vue-router实现路由跳转，better-scroll实现下拉刷新功能
+        <dt><strong>抓饭直播PC2.3大改版</strong></dt>
+        <dd class="desc">在一周时间内按时按质按良完成任务</dd>
+        <dd><strong>技术栈:</strong>vue.js, scss, fis3</dd>
+        <dd><strong>主要难点:</strong>原乐视体育项目，代码老旧，维护困难</dd>
+        <dd><strong>攻克难点:</strong>
+          <ul>
+            <li>在项目内引入vue.js，重新梳理项目结构</li>
+            <li>建立公共组件库，工具库</li>
+            <li>完善构建工具fis3，优化前端工作流程</li>
+          </ul>
         </dd>
-        <dd><strong>技术难点</strong>：上拉加载，由于better-scroll所提供上拉加载方法不贴合需求，故自己实现上拉加载方法</dd>
-        <dd><strong>收获</strong>：了解vm.$nextTick方法，了解vue生命周期，了解vue过渡动画等知识</dd>
       </dl>
       <dl>
-        <dt><strong>企业微信公众号预申请开立对公账户需求</strong></dt>
-        <dd>为减少客户申请难度，提升客户感受，在企业微信公众号内开发预约开户功能</dd>
-        <dd><strong>技术栈</strong>：Angular.js, ui-router。使用百度地图SDK，实现网点选择功能。canvas实现前端图片压缩上传功能</dd>
-        <dd><strong>技术难点</strong>：
-          <ul>
-            <li>geolocation定位兼容性问题</li>
-            <li>坐标转换坑、相应算法分割</li>
-            <li>iPhone拍照莫名旋转90°</li>
-          </ul>
-        
-        </dd>
-        <dd>
-          <strong>收获</strong>：激发了我深入学习原生js的动力，学会看文档，对陌生框架不再恐惧。对<strong>异步</strong>，<strong>this</strong>，<strong>原型链</strong>等知识点有了更加深入的理解
-        </dd>
+        <dt><strong>抓饭直播微信公众号开发、小程序开发</strong></dt>
+        <dd class="desc">独自搭建前端开发环境，小程序选用mpvue作为开发框架</dd>
+        <dd><strong>技术栈:</strong>mpvue, vue.js, less, 大体与vue-cli一致</dd>
       </dl>
     </ul>
-  </ul>
+  </div>
+  <div class="project">
+    <div class="justify">
+      <span>2016.11 - 2018.10</span>
+      <span class="center">北京科蓝</span>
+      <span>前端开发</span>
+    </div>
+    <ul>
+      <li><strong>主要职责：</strong>负责光大银行项目组微信公众号开发</li>
+    </ul>
+  </div>
   <h2>自我评价</h2>
-  <p>热爱前端，热爱技术，不局限自己于前端。明白沉淀与积累的重要性。善于沟通，对用户体验有着极高的追求。</p>
+  <p>热爱前端，热爱技术。github活跃分子。爱好造轮子，看不惯低效工作。善于沟通，对用户体验有着极致的追求。</p>
 </div>
 </body>
 </html>
