--- a/source/404.html
+++ b/source/404.html
@@ -38,7 +38,7 @@
 			</a>
 		</p>
 		<div>
-			<img src="https://upload-images.jianshu.io/upload_images/11264410-455335f4aeee9727.gif" alt="404">
+			<img src="/images/11264410-455335f4aeee9727.gif" alt="404">
 		</div>
 		<p><strong>不如坐下来玩个游戏吧！《圈小猫》</strong></p>
 		<p>玩法：点击小圆点，将小猫圈住！</p>
