--- a/source/404.html
+++ b/source/404.html
@@ -1,52 +1,56 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <style>
-  	.container p{
-  		color: rgba(0, 0, 0, .7);
-  	}
-  	.container a{
-  		display: inline-block;
-  		vertical-align: middle;
-  		opacity: .6;
-  	}
-  	footer{
-  		text-align: center;
-  		margin-top: 20px
-  	}
-  	footer img{
-  		vertical-align: sub;
-  	}
-  	footer a{
-  		text-decoration: none;
-    	color: #09F;
-  	}
-  </style>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <style>
+		.container p{
+			color: rgba(0, 0, 0, .7);
+		}
+		.container a{
+			display: inline-block;
+			vertical-align: middle;
+			opacity: .6;
+		}
+		footer{
+			text-align: center;
+			margin-top: 20px
+		}
+		footer img{
+			vertical-align: sub;
+		}
+		footer a{
+			text-decoration: none;
+			color: #09F;
+		}
+	</style>
+    <script src="phaser.min.js"></script>
+    <script src="catch-the-cat.js"></script>
 </head>
 <body>
-	<header>
-		<h1 style="display: block;margin: 20px 0;font-size: 60px;font-weight: 500;text-align: center;">糟糕！404了</h1>
-	</header>
-	<div style="margin: 0 auto;text-align: center">
-		<p>
-			<strong>你仿佛迷了路~</strong>
-			链接找不到请联系我!
-			<a href="mailto:justdoit0212@163.com">
-				<svg class="octicon octicon-mail" viewBox="0 0 14 16" version="1.1" width="25" height="25" aria-hidden="true"><path fill-rule="evenodd" d="M0 4v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1zm13 0L7 9 1 4h12zM1 5.5l4 3-4 3v-6zM2 12l3.5-3L7 10.5 8.5 9l3.5 3H2zm11-.5l-4-3 4-3v6z"></path></svg>
-			</a>
-		</p>
-		<div>
-			<img src="/images/11264410-455335f4aeee9727.gif" alt="404">
-		</div>
-		<p><strong>不如坐下来玩个游戏吧！《圈小猫》</strong></p>
-		<p>玩法：点击小圆点，将小猫圈住！</p>
-		<embed src="52.swf" width="600" height="460"></embed>
-	</div>
-	<footer>
-		<img src="/home.png" alt="返回首页" width="30">
-		<a href="javascript:location.href=location.origin" title="返回首页">返回首页</a>
-	</footer>
+    <header>
+        <h1 style="display: block;margin: 20px 0;font-size: 60px;font-weight: 500;text-align: center;">糟糕！404了</h1>
+    </header>
+    <div style="margin: 0 auto;text-align: center">
+        <p>
+            <strong>你仿佛迷了路~</strong>
+            链接找不到请联系我!
+            <a href="mailto:justdoit0212@163.com">
+                <svg class="octicon octicon-mail" viewBox="0 0 14 16" version="1.1" width="25" height="25" aria-hidden="true"><path fill-rule="evenodd" d="M0 4v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1zm13 0L7 9 1 4h12zM1 5.5l4 3-4 3v-6zM2 12l3.5-3L7 10.5 8.5 9l3.5 3H2zm11-.5l-4-3 4-3v6z"></path></svg>
+            </a>
+        </p>
+        <div>
+            <img src="/images/11264410-455335f4aeee9727.gif" alt="404">
+        </div>
+        <p><strong>不如坐下来玩个游戏吧！《圈小猫》</strong></p>
+        <div id="catch-the-cat"></div>
+        <script>
+            new CatchTheCatGame({w:11,h:11,r:20,backgroundColor:16777215,parent:"catch-the-cat",statusBarAlign:"center",credit:"www.pangjunpeng.com"})
+        </script>
+    </div>
+    <footer>
+        <img src="/home.png" alt="返回首页" width="30">
+        <a href="javascript:location.href=location.origin" title="返回首页">返回首页</a>
+    </footer>
 </body>
 </html>
